<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:background="#000"
    tools:context=".ui.dashboard.symptoms.SymptomsFragment">

    <TextView
        android:id="@+id/statisticsTitle"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/tab_symptoms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageGirl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/im_girl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticsTitle"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/gradient_black"
        app:layout_constraintBottom_toBottomOf="@+id/imageGirl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageGirl"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/fever"
        style="@style/SymptomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:drawableBottom="@drawable/ic_underline_fever"
        android:drawablePadding="12dp"
        android:text="@string/symptoms_fever"
        app:layout_constraintBottom_toBottomOf="@+id/imageGirl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageGirl"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/headache"
        style="@style/SymptomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:drawableBottom="@drawable/ic_underline_headache"
        android:gravity="end"
        android:text="@string/symptoms_headache"
        app:layout_constraintBottom_toBottomOf="@+id/imageGirl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageGirl"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/runnyNose"
        style="@style/SymptomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableBottom="@drawable/ic_underline_runny_nose"
        android:gravity="start"
        android:text="@string/symptoms_runny_nose"
        app:layout_constraintStart_toStartOf="@+id/fever"
        app:layout_constraintTop_toBottomOf="@+id/fever" />

    <TextView
        android:id="@+id/throatPain"
        style="@style/SymptomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableBottom="@drawable/ic_underline_throat_pain"
        android:gravity="end"
        android:text="@string/symptoms_throat_pain"
        app:layout_constraintEnd_toEndOf="@+id/headache"
        app:layout_constraintTop_toBottomOf="@+id/headache" />

    <TextView
        android:id="@+id/shakingChills"
        style="@style/SymptomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_underline_shaking_chills"
        android:gravity="start"
        android:text="@string/symptoms_shaking_chills"
        app:layout_constraintBottom_toBottomOf="@+id/imageGirl"
        app:layout_constraintStart_toStartOf="@+id/runnyNose"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/dyspnea"
        style="@style/SymptomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_underline_dypsnoea"
        android:gravity="end"
        android:text="@string/symptoms_dyspnea"
        app:layout_constraintBottom_toBottomOf="@+id/imageGirl"
        app:layout_constraintEnd_toEndOf="@+id/throatPain"
        app:layout_constraintVertical_bias="0.7" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGirl">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/symptom_icon_size"
                android:layout_height="@dimen/symptom_icon_size"
                android:src="@drawable/ic_symptoms_fever"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="@dimen/symptom_icon_size"
                android:layout_height="@dimen/symptom_icon_size"
                android:layout_marginStart="@dimen/symptom_icon_margin_start"
                android:src="@drawable/ic_symptoms_runny_nose"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="@dimen/symptom_icon_size"
                android:layout_height="@dimen/symptom_icon_size"
                android:layout_marginStart="@dimen/symptom_icon_margin_start"
                android:src="@drawable/ic_symptoms_throat_pain1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="@dimen/symptom_icon_size"
                android:layout_height="@dimen/symptom_icon_size"
                android:layout_marginStart="@dimen/symptom_icon_margin_start"
                android:src="@drawable/ic_symptoms_shaking_chills"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="@dimen/symptom_icon_size"
                android:layout_height="@dimen/symptom_icon_size"
                android:layout_marginStart="@dimen/symptom_icon_margin_start"
                android:src="@drawable/ic_symptoms_throat_pain"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>